# airflow-k8s-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  config.yaml  connections.py  k8s_secret.py  main.py  pyproject.toml  variables.py
.github/workflows/: generate-check.yaml  helm-ci.yaml  helm-release.yaml  integration-test.yaml  release.yaml  test.yaml  unit-test.yaml
chart/airflow-k8s-operator/: Chart.yaml  README.md  values.yaml
chart/airflow-k8s-operator-crds/: Chart.yaml  README.md  values.yaml
chart/airflow-k8s-operator-crds/templates/: connection.yaml  pool.yaml  variable.yaml
chart/airflow-k8s-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml
chart/airflow-k8s-operator/templates/crds/: connection.yaml  pool.yaml  variable.yaml
config/: aws.py  base.py  client.py  metrics.py  reconcile.py
crds/: connection.yaml  variable.yaml
resources/: connections.py  pools.py  schemas.py  variables.py
scripts/: gen_crds.py
tests/: conftest.py  connection.yaml  giveup_test.py  operator_test.py  test_client_jwt.py  test_handlers.py  test_k8s_secret.py  test_reconcile.py  variable-adopt.yaml  variable-missing-secret.yaml  variable.yaml
